--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <p> Explorează munca noastră captivantă și descoperă imagini unice, portrete îndrăznețe și peisaje uluitoare. Află mai multe despre biografiile noastre și inspirațiile care i-au definit. Această platformă te va captiva și inspira prin frumusețea și originalitatea noastră vizuală .  </p>
 
             <a class="cta-btn" href="contact.html">Available for hire</a>
 
