--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>Contact</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <p>Dacă aveti nevoie de serviciile noaste nu ezitați să ne contactați. V-am lăsat datele de contact mai jos. Așteptăm cu mare drag viitoarele parteneriate pe care le vom avea în viitotr.</p>
 
           </div>
         </div>
@@ -114,7 +114,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>A108 București, sec. 1, str. Pe Aici, nr. 2</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -124,7 +124,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>fotografiiracheta@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -134,7 +134,7 @@
               <i class="bi bi-phone flex-shrink-0"></i>
               <div>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55</p>
+                <p>0773370100</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -162,9 +162,9 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Mesajul tău a fost trimis. Mulțumim!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Trimite!</button></div>
             </form>
           </div><!-- End Contact Form -->
 
