--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2>Salut! Sunt <span>Beni Neagu</span> fotograf profesionist din București</h2>
-          <p>Sunt bucuros sa va prezint portofoliul meu.</p>
+          <h2>Salut! Suntem <span>Fotografii Racheta</span> creatori de artă profesioniști din București</h2>
+          <p>Suntem bucuroși să vă prezentăm portofoliul nostru.</p>
           <a href="contact.html" class="btn-get-started">Available for hire</a>
         </div>
       </div>
